[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spkb"
version = "0.0.1"
authors = [
  { name="David H. Bronke", email="whitelynx@gmail.com" },
]
description = "A SolidPython-based library for building custom keyboards with Python and OpenSCAD."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
license = {file = "LICENSE"}
dependencies = {
	"solidpython2",
}

[project.urls]
"Homepage" = "https://github.com/whitelynx/spkb"
"Bug Tracker" = "https://github.com/whitelynx/spkb/issues"
